# network-view

./: Cargo.toml  README.md  build.ts  package-lock.json  package.json
.github/workflows/: main.yml
docker/: mips
src/: main.rs  statistics.rs  websocket.rs
src/http_server/: mod.rs  not_found.rs
src/http_server/file_send/: .gitignore  mod.rs
src/tls/: mod.rs  readme.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  Content.tsx  Echart.tsx  index.css  main.tsx
web/src/common/: Connection.ts  DataManager.ts
web/src/dialogs/: Help.tsx  Manage.tsx
web/src/hooks/: DarkMedia.ts  DataManager.ts  Echart.tsx  Visibility.ts  Ws.ts
web/src/workers/: tsconfig.json
