[package]
name = "network_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = { version = "0.34", features = ["serde"] }
bytes = "1"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
rustls-pemfile = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
tokio-tungstenite = "0.20"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
flate2 = "1"
mime_guess = "2"
argh = "0.1"
